# EPUB-Dual-Language-Translator

./: .gitignore  README.md  README_zh.md  main.py  pyproject.toml
tools/: checkpoint.py  epub_utils.py
translators/: base_api.py  base_translator.py  openai_style.py  openai_style_free.py
